--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="main">
         <div class="note">
-            
+            <div class="tool">
+                
+            </div>
         </div>
 
     </div>
