--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <div id="main">
         <div class="note">
             <div class="tool">
-                
+                <i class="fas fa-trash"></i>
+                <i class="fas fa-save"></i>
             </div>
         </div>
 
     </div>
     
 </body>
+<script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </html>
