--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <i class="fas fa-trash"></i>
                 <i class="fas fa-save"></i>
             </div>
+            <textarea></textarea>
         </div>
 
     </div>
