--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="addbtn">
+        <i class="fas fa-plus"></i>
+        Add Note
+    </button>
     <div id="main">
         <div class="note">
             <div class="tool">
