--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <i class="fas fa-plus"></i>
         Add Note
     </button>
-    <div id="main">
+    <!-- <div id="main">
         <div class="note">
             <div class="tool">
                 <i class="fas fa-trash"></i>
@@ -20,7 +20,7 @@
             <textarea></textarea>
         </div>
 
-    </div>
+    </div> -->
     
 </body>
 <script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>
