--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <i class="fas fa-plus"></i>
         Add Note
     </button>
-    <!-- <div id="main">
-        <div class="note">
+    <div id="main">
+        <!-- <div class="note">
             <div class="tool">
                 <i class="fas fa-trash"></i>
                 <i class="fas fa-save"></i>
             </div>
             <textarea></textarea>
-        </div>
+        </div> -->
 
-    </div> -->
+    </div>
     
 </body>
 <script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>
