--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="addbtn">
+    <button id="addBtn">
         <i class="fas fa-plus"></i>
         Add Note
     </button>
